@startuml

skinparam classAttributeIconSize 0
skinparam style strictuml

class dextro.command.UndoCommand {
- CommandHistory history
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.ExitCommand {
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}

class dextro.command.FindCommand {
- String substring
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
- boolean matchesSubstring(Student,String)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.CommandResult {
- String message
- boolean exit
+ String getMessage()
+ boolean shouldExit()
}


class dextro.command.DeleteCommand {
- int index
- Student deletedStudent
- int deletedIndex
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.module.AddCommand {
- int index
- String moduleCode
- Grade grade
- Integer credits
- boolean wasExecuted
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.EditCommand {
- int index
- String name
- String phone
- String email
- String address
- String course
- String moduleCode
- Grade grade
- Integer credits
- Student previousStudent
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.SortCommand {
- String category
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.StatusCommand {
- int index
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.SearchCommand {
- String course
- String moduleCode
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult execute(StudentDatabase)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


class dextro.command.ListCommand {
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}

class dextro.command.CreateCommand {
- String name
- String phone
- String email
- String address
- String course
- int createdIndex
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ boolean isUndoable()
}


class dextro.command.CommandHistory {
- Stack<Command> history
+ void push(Command)
+ Command pop()
+ boolean isEmpty()
+ void clear()
}


class dextro.command.module.RemoveCommand {
- int index
- String moduleCode
- Module removedModule
+ CommandResult execute(StudentDatabase)
+ CommandResult execute(StudentDatabase,Storage)
+ CommandResult undo(StudentDatabase)
+ CommandResult undo(StudentDatabase,Storage)
+ boolean isUndoable()
}


interface dextro.command.Command {
~ CommandResult execute(StudentDatabase)
~ CommandResult execute(StudentDatabase,Storage)
~ CommandResult undo(StudentDatabase)
~ CommandResult undo(StudentDatabase,Storage)
~ boolean isUndoable()
}



dextro.command.Command <|.. dextro.command.UndoCommand
dextro.command.Command <|.. dextro.command.ExitCommand
dextro.command.Command <|.. dextro.command.FindCommand
dextro.command.Command <|.. dextro.command.DeleteCommand
dextro.command.Command <|.. dextro.command.module.AddCommand
dextro.command.Command <|.. dextro.command.EditCommand
dextro.command.Command <|.. dextro.command.SortCommand
dextro.command.Command <|.. dextro.command.StatusCommand
dextro.command.Command <|.. dextro.command.SearchCommand
dextro.command.Command <|.. dextro.command.ListCommand
dextro.command.Command <|.. dextro.command.CreateCommand
dextro.command.Command <|.. dextro.command.module.RemoveCommand
@enduml